--- a/style.css
+++ b/style.css
@@ -57,14 +57,13 @@ header{
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: 600;
+    cursor: pointer;
 }
 
 /* web-dev-section styles */
 
 .web-dev-section{
-    border: 2px solid red;
     width: 1250px;
-    height: 1000px;
     margin: 0 auto;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
@@ -100,12 +99,53 @@ header{
 }
 
 .web-dev-section-details{
-    border: 2px solid red;
     width: 1050px;
     height: 360px;
     margin: 0 auto;
     border-radius: 16px;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    margin-bottom: 50px;
+}
+
+
+
+.web-content{
+    width: 60%;
+    padding-left: 20px;
+    
+}
+.web-content h3{
+    color: rgba(13, 19, 33, 0.7);
+    font-size: 24px;
+    font-weight: 700;
+    
+}
+.web-content p{
+    color: rgb(13, 19, 33);
+    opacity: .7;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 50px;
+    margin-bottom: 70px;
+    
+}
+.web-content button{
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
+    padding: 12px 20px;
+    cursor: pointer;
+    
+    
+}
+
+.web-image{
+    width: 30%;
 }
 
