main body first section completed

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ header{
     background: rgba(13, 19, 33, 0.02);
     padding-top:80px ;
     margin-top: 75px;
+    padding-bottom: 80px;
     
 }
 
