--- a/style.css
+++ b/style.css
@@ -278,5 +278,62 @@ header{
 .end-card{
     background: rgba(255, 223, 0, 0.05);
 }
+.supports{
+    border-radius: 16px;
+    background-color: rgba(0, 0, 0, 0.341);
+    background-image: url(assets/handshake.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: overlay;
+    width: 1250px;
+    height: 350px;
+    margin: 0 auto;   
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.supports h2{
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.supports p{
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 16px;
+    opacity: .7;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+.feedback{
+    width: 600px;
+    height: 60px;
+    margin: 0 auto;
+}
+.feedback input{
+    width: 70%;
+    height: 60px;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    
+}
+.feedback button{
+    width: 20%;
+    height: 60px;
+    border-radius: 10px;
+    color: rgb(13, 19, 33);
+    border: none;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 
 
